--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -256,6 +256,6 @@
 		<span>Dining. Reinvented.</span>
 	</div>
 	<div id="Brining_back_the_fun_of__dinin">
-		<span>Brining back the fun of <br/>dining out.</span>
+		<span>Bringing back the fun of <br/>dining out.</span>
 	</div>
 </div>
