--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,5 +1,28 @@
-<h1>Register
-</h1>
-
-<span>placeholder
-</span>
+<div id="Web_1280__6">
+    <svg class="Path_1" viewBox="0 0 1280 913.06">
+		<path id="Path_1" d="M 0 0 L 1280 0 L 1280 606.8942260742188 C 1280 716.0728149414062 1176.24462890625 804.5796508789062 1048.255859375 804.5796508789062 C 1048.255859375 804.5796508789062 515.3896484375 804.114013671875 258.8001708984375 804.5796508789062 C 2.210696935653687 805.0452270507812 0 913.0595092773438 0 913.0595092773438 L 0 0 Z">
+		</path>
+	</svg>
+	<div id="Yumzz">
+		<span>Register</span>
+    </div>
+    <div id="statement">
+        <span>Sign up to get newsletter?</span>
+    </div>
+    <div id="Email">
+        <span>Email:</span>
+        <br/>
+        <input type="text" placeholder="Your Email">
+    </div>
+    <a routerLink="/register">
+        <div id="Submit">
+            <svg class="Rectangle_40">
+                <rect id="Rectangle_40" rx="15" ry="15" x="0" y="0" width="150" height="50">
+                </rect>
+            </svg>
+            <div id="Submit-text">
+                <span>Submit</span>
+            </div>
+        </div>
+    </a>
+</div>
