How our services work text

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -208,6 +208,21 @@
 	<div id="How_does_our_service_work">
 		<span>How does our service work?</span>
 	</div>
+	<div id="How_Services_Work">
+		<span>Users in the local area are able to see restaurants <br>
+			partnered with Yumzz on  our map view. From there, <br>
+			the user can see the information on the restaurant, <br>
+			the restaurant's menu and details for each dish. <br>
+			The user can either use our digital menu or scan <br> 
+			the restaurant's menu to see info on a specific dish. <br>
+			If the user decides to order one of the dishes, <br>
+			they can click the order button.  If the restaurant <br>
+			has chosen to connect their POS system to our app, <br>
+			then the order goes directly to their ticketing system. <br> 
+			If not, then the user must  order as normal. <br>
+			Our own POS system is being developed and will be <br>
+			offered in a month.</span>
+	</div>
 	<div id="Why_use_VirtualMenu">
 		<span>Why use VirtualMenu?</span>
 	</div>
