Change Pictures and Deploy

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -29,7 +29,7 @@
   <img
     id="slant"
     src="../assets/InitialScreenView.png"
-    srcset="../assets/slant.png 1x, ../assets/slant@2x.png 2x"
+    srcset="../assets/InitialScreenView.png"
   />
   <div id="Download_on_the_App_Store_Badg">
     <div id="Group_10">
@@ -295,24 +295,24 @@
   </svg>
   <div id="Group_15">
     <img
-      id="screen_ex"
+      id="screen_ex_c"
       src="../assets/MapView.png"
-      srcset="../assets/screen_ex.png 1x, ../assets/screen_ex@2x.png 2x"
+      srcset="../assets/MapView.png"
     />
     <img
-      id="screen_ex_c"
+      id="screen_ex"
       src="../assets/ListRestView.png"
-      srcset="../assets/screen_ex_c.png 1x, ../assets/screen_ex_c@2x.png 2x"
+      srcset="../assets/ListRestView.png"
     />
     <img
       id="screen_ex_da"
       src="../assets/DishListView.png"
-      srcset="../assets/screen_ex_da.png 1x, ../assets/screen_ex_da@2x.png 2x"
+      srcset="../assets/DishListView.png"
     />
     <img
       id="screen_ex_db"
       src="../assets/DishDetailsView.png"
-      srcset="../assets/screen_ex_db.png 1x, ../assets/screen_ex_db@2x.png 2x"
+      srcset="../assets/DishDetailsView.png"
     />
   </div>
   <div id="How_does_our_service_work">
