Fix font, add pic

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -340,19 +340,11 @@
   </div>
   <img
     id="Screen_Shot_2020-06-22_at_5594"
-    src="../assets/Screen_Shot_2020-06-22_at_5594.png"
-    srcset="
-      ../assets/Screen_Shot_2020-06-22_at_5594.png    1x,
-      ../assets/Screen_Shot_2020-06-22_at_5594@2x.png 2x
-    "
+    src="../assets/qr_code.jpeg"
   />
   <img
     id="Screen_Shot_2020-06-22_at_6015"
-    src="../assets/Screen_Shot_2020-06-22_at_6015.png"
-    srcset="
-      ../assets/Screen_Shot_2020-06-22_at_6015.png    1x,
-      ../assets/Screen_Shot_2020-06-22_at_6015@2x.png 2x
-    "
+    src="../assets/people_on_phone.jpg"
   />
   <svg class="Rectangle_45">
     <rect
